-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 6u10, 7
-
Component/s: client-libs
-
b25
-
generic, x86
-
generic, windows
-
Not verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-2155994 | 6u10 | Oleg Sukhodolsky | P2 | Closed | Fixed | b09 |
If the holder of a WEmbeddedFrame destroys the containing window before WEmbeddedFrame.dispose() is called, the native peer will process the WM_DESTROY windows message and destroy and unlink the native peer from the Java-level WEmbeddedFrame object without giving it an indication that it has been destroyed. Subsequent calls to WEmbeddedFrame.dispose() will raise a NullPointerException. If an NPE is raised during AppContext.dispose() (the loop processing ownerless windows, at least in JDK 6 and later) then other top-level windows won't be properly disposed. The WEmbeddedFrame.dispose() code should be made more robust, as should the loop in AppContext.dispose(), since if any exception is raised during window disposal, other windows and resources won't be properly disposed. In the case of the Java Plug-In, this has the bad side-effect of potentially leaving applets' top-level windows on the screen after the applet has theoretically terminated.
- backported by
-
JDK-2155994 EmbeddedFrame disposal is fragile and breaks clean AppContext termination
-
- Closed
-
- duplicates
-
JDK-6638153 Java Console crash with new OOPP
-
- Closed
-
- relates to
-
JDK-6605126 Add detection of failed applet shutdown and notion of tainting
-
- Closed
-
-
JDK-6609271 Plugin2: ClassNotFound exception getting thrown sometimes once applet is refreshed
-
- Closed
-
-
JDK-6613949 run Yokogawa reliability test with new plug-in bundle caused big handle leaks
-
- Closed
-
-
JDK-6616692 Two Java consoles exist when refresh the game applets
-
- Closed
-
-
JDK-6627386 JavaScript errors with gamehouse.com applets
-
- Closed
-