6592751: EmbeddedFrame disposal is fragile and breaks clean AppContext termination

AppContext.dispose() should be ready to get exceptions during disposal of toplevels.  Also now we mark windows peers as destroyed when native object has been destroyed.

Reviewed-by: art